set(SYSTEM_INCLUDE_PATH /usr/local/include/)
set(gtest_src  interface_base.cxx singleton_clog.cxx parse_config_test.cxx
        env_test.cxx tags_test.cxx main.cxx)
include_directories(SYSTEM ../src/)
include_directories(SYSTEM ../include/)
include_directories(SYSTEM ${SYSTEM_INCLUDE_PATH})
link_libraries(thrift)
link_libraries(pthread)
link_libraries(gtest)
add_executable(cmdcpp testclog.cxx)
add_executable(cmdc testclog.c)
add_executable(ggtest ${gtest_src})
target_link_libraries(cmdcpp clog)
target_link_libraries(cmdc clog)
target_link_libraries(ggtest clog)
