#[[example project brand new build]]
cmake_minimum_required(VERSION 2.6)

project(cthrift_example C CXX)

SET(CMAKE_CXX_FLAGS "-g -Wall -O2 -DMUDUO_STD_STRING -DHAVE_NETINET_IN_H")

#for output
#default binary and lib path
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin)

#endif()


#reset EXAMPLE_INCLUDE_PATH
MESSAGE(STATUS "EXAMPLE_INCLUDE_PATH ${EXAMPLE_INCLUDE_PATH}")
MESSAGE(STATUS "SYSTEM_INCLUDE_PATH ${SYSTEM_INCLUDE_PATH}")

FIND_PACKAGE(Boost 1.45.0 REQUIRED)
MESSAGE(STATUS "Boost_INCLUDE_DIR ${Boost_INCLUDE_DIR}")
MESSAGE(STATUS "Boost_LIBRARIES ${Boost_LIBRARY_DIRS}")


SET(SYSTEM_INCLUDE_PATH /usr/include/)
SET(MEITUAN_THRID_INCLUDE_PATH /opt/meituan/)
INCLUDE_DIRECTORIES(SYSTEM ${SYSTEM_INCLUDE_PATH})
INCLUDE_DIRECTORIES(SYSTEM ${SYSTEM_INCLUDE_PATH}/thrift)
INCLUDE_DIRECTORIES(SYSTEM ${MEITUAN_THRID_INCLUDE_PATH}/kms/include/)
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${MEITUAN_THRID_INCLUDE_PATH}/kms/lib/)

IF (NOT EXISTS ./echo)
    EXECUTE_PROCESS(COMMAND thrift --gen cpp:cob_style echo.thrift
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
    EXECUTE_PROCESS(COMMAND mv gen-cpp ./echo)
ENDIF (NOT EXISTS ./echo)

INCLUDE_DIRECTORIES(SYSTEM echo)

ADD_EXECUTABLE(mns_sdk_example mns_sdk_example.cc)

TARGET_LINK_LIBRARIES(mns_sdk_example -Xlinker "-(" libcthrift.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a  pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a  libcryptopp.a libkms_comm.a ssl -Xlinker "-)")

ADD_EXECUTABLE(mcc_sdk_example mcc_sdk_example.cc)

TARGET_LINK_LIBRARIES(mcc_sdk_example -Xlinker "-(" libcthrift.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a libcryptopp.a libkms_comm.a boost_filesystem boost_thread ssl -Xlinker "-)")

SET(ECHO_THRIFT_SRCS
        echo/echo_constants.cpp
        echo/echo_types.cpp
        echo/Echo.cpp
        )

ADD_EXECUTABLE(cthrift_svr_example ${ECHO_THRIFT_SRCS} cthrift_svr_example.cc)

TARGET_LINK_LIBRARIES(cthrift_svr_example -Xlinker "-(" libcthrift.a libcmtraceV2.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a libcryptopp.a libkms_comm.a liblog4cplus.a ssl -Xlinker "-)")

ADD_EXECUTABLE(cthrift_cli_example ${ECHO_THRIFT_SRCS} cthrift_cli_example.cc)

TARGET_LINK_LIBRARIES(cthrift_cli_example -Xlinker "-(" libcthrift.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a libcryptopp.a libkms_comm.a liblog4cplus.a  ssl -Xlinker "-)")

ADD_EXECUTABLE(cthrift_svr_auth_example ${ECHO_THRIFT_SRCS} cthrift_svr_auth_example.cc)

TARGET_LINK_LIBRARIES(cthrift_svr_auth_example -Xlinker "-(" libcthrift.a libcmtraceV2.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a libcryptopp.a libkms_comm.a liblog4cplus.a ssl -Xlinker "-)")

ADD_EXECUTABLE(cthrift_cli_auth_example ${ECHO_THRIFT_SRCS} cthrift_cli_auth_example.cc)

TARGET_LINK_LIBRARIES(cthrift_cli_auth_example -Xlinker "-(" libcthrift.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a libcryptopp.a libkms_comm.a liblog4cplus.a  ssl -Xlinker "-)")


ADD_EXECUTABLE(cthrift_async_example ${ECHO_THRIFT_SRCS} cthrift_async_example.cc)

TARGET_LINK_LIBRARIES(cthrift_async_example -Xlinker "-(" libcthrift.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a libcryptopp.a libkms_comm.a liblog4cplus.a  ssl -Xlinker "-)")

ADD_EXECUTABLE(kms_example  kms_example.cc)

TARGET_LINK_LIBRARIES(kms_example -Xlinker "-(" libcthrift.a libcatclient.a libmuduo_net.a libmuduo_base.a libmuduo_http.a pthread  rt z uuid libclog.a libcmtraceV2.a liboctoidl.a
        libthrift.a  libcryptopp.a libkms_comm.a liblog4cplus.a ssl -Xlinker "-)")






#[[ADD_EXECUTABLE(thrift_echo_cli ${ECHO_THRIFT_SRCS} thrift_echo_cli.cc)
#TARGET_LINK_LIBRARIES(thrift_echo_cli -Xlinker "-(" event
   #     libthrift.a -Xlinker "-)")

#ADD_EXECUTABLE(thrift_getSvrList_cli thrift_getSvrList_cli.cc)
#TARGET_LINK_LIBRARIES(thrift_getSvrList_cli -Xlinker "-(" libthriftnb.a libthrift.a liboctoidl.a event -Xlinker "-)")

#ADD_EXECUTABLE(thrift_echo_svr ${ECHO_THRIFT_SRCS} thrift_echo_svr.cc)
#TARGET_LINK_LIBRARIES(thrift_echo_svr -Xlinker "-(" event libthriftnb.a libthrift.a -Xlinker "-)")

#ADD_EXECUTABLE(thrift_echo_cli_perf_test ${ECHO_THRIFT_SRCS} thrift_echo_cli_perf_test.cc)
#TARGET_LINK_LIBRARIES(thrift_echo_cli_perf_test -Xlinker "-(" event libthriftnb.a libthrift.a -Xlinker "-)")

#INSTALL(CODE "execute_process(COMMAND find ${CTHRIFT_SRC_PATH}/example -name *example*.cc -exec cp -t ${EXAMPLE_CTHRIFT_OUTPUT_PATH} {} \;)")]]
